--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is 
+            <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" target="_blank">
+                Shape of You - Ed Sheeran
+            </a>
+        </p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
