--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<div>
 		<p>My current favourite song is 
-            <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" target="_blank">
-                Shape of You - Ed Sheeran
+            <a href="https://www.youtube.com/watch?v=D_SRMiIWyL4" target="_blank">
+                O rendu prama magalu
             </a>
         </p>
 	</div>
